...
      (item, i) => (
        ((i + 1) * snapWidth) - 7.5
      ),
    );
    return (
      <ScrollView
        testID="homeScreenScrollView"
        horizontal
        showsHorizontalScrollIndicator={false}
        snapToOffsets={snapOffsets}
        decelerationRate="fast"
        contentContainerStyle={styles.container}
      >
...
